Bug 436232 - Touch controls for the viewport causes jitteriness and unexpected panning when horizontally distant from center of canvas.
Summary: Touch controls for the viewport causes jitteriness and unexpected panning whe...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: 4.4.3
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-26 19:07 UTC by seagoatworksholder
Modified: 2021-05-06 04:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description seagoatworksholder 2021-04-26 19:07:32 UTC
SUMMARY
When using the touchscreen to pan and rotate the viewport of the document when the viewport is panned horizontally offset from the center, the document would unexpectedly jitter and pan vertically.

STEPS TO REPRODUCE
1. Make a new document with pixel dimensions of at least 16000x8000. Make some lines or a grid to make sure you have a reference.
2. Pan the document to either the very left or the very right side of the screen.
3. Rotate the canvas side to side from zero degrees using the touch screen controls. This is done using two fingers and pivoting them around like a valve or a wheel.

OBSERVED RESULT
The document would pan up or down on its own even if the fingers are not attempting to pan up or down. The effect becomes more extreme when zoomed in and further away horizontally from the center.

EXPECTED RESULT
The canvas would rotate properly without feeling as if was slipping out of your control.

SOFTWARE/OS VERSIONS
Windows: Windows 10
Qt Version: 5.12.9

ADDITIONAL INFORMATION
Krita window is fullscreen at a resolution of 3840x2160. DPI is 150%.
Comment 1 Bug Janitor Service 2021-05-04 13:03:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/833
Comment 2 Dmitry Kazakov 2021-05-06 04:25:38 UTC
Git commit 50d1637803accbab2c7ac6ad05c84a2cf8fe8b2f by Dmitry Kazakov, on behalf of Sharaf Zaman.
Committed on 06/05/2021 at 04:25.
Pushed by dkazakov into branch 'master'.

Bugfix: Unstable canvas when touch rotation is enabled

M  +67   -16   libs/ui/input/kis_zoom_and_rotate_action.cpp
M  +3    -2    libs/ui/input/kis_zoom_and_rotate_action.h

https://invent.kde.org/graphics/krita/commit/50d1637803accbab2c7ac6ad05c84a2cf8fe8b2f