Bugfix: Unstable canvas when touch rotation is enabled

BUG:436232